--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-06-24-13-12-58.gh-issue-134786.MF0VVk.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-06-24-13-12-58.gh-issue-134786.MF0VVk.rst
@@ -1,3 +1,3 @@
-Fix segmentation fault when deallocating object of the type with
-:c:macro:`Py_TPFLAGS_MANAGED_WEAKREF` or :c:macro:`Py_TPFLAGS_MANAGED_DICT`
-enabled but without :c:macro:`Py_TPFLAGS_HAVE_GC`.
+Force to use :c:macro:`Py_TPFLAGS_HAVE_GC` if
+:c:macro:`Py_TPFLAGS_MANAGED_DICT` or :c:macro:`Py_TPFLAGS_MANAGED_WEAKREF`
+used.
