--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -558,8 +558,8 @@ xml.parsers.expat
 
 * Add :meth:`~xml.parsers.expat.xmlparser.SetAllocTrackerActivationThreshold`
   and :meth:`~xml.parsers.expat.xmlparser.SetAllocTrackerMaximumAmplification`
-  to :ref:`xmlparser <xmlparser-objects>` objects to prevent use of
-  disproportional amounts of dynamic memory from within an Expat parser.
+  to :ref:`xmlparser <xmlparser-objects>` objects to tune protections against
+  disproportional amounts of dynamic memory usage from within an Expat parser.
   (Contributed by Bénédikt Tran in :gh:`90949`.)
 
 * Add :meth:`~xml.parsers.expat.xmlparser.SetBillionLaughsAttackProtectionActivationThreshold`
