--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -531,7 +531,8 @@ tarfile
 timeit
 ------
 
-* Error tracebacks are now colourised by default. This can be controlled by
+* The command-line interface now colorize error tracebacks
+  by default. This can be controlled by
   :ref:`environment variables <using-on-controlling-color>`.
   (Contributed by Yi Hong in :gh:`139374`.)
 
