Apply suggestions from code review
Co-authored-by: Stan Ulbrych <89152624+StanFromIreland@users.noreply.github.com>
Co-authored-by: Bénédikt Tran <10796600+picnixz@users.noreply.github.com>

--- a/Doc/whatsnew/3.15.rst
+++ b/Doc/whatsnew/3.15.rst
@@ -531,8 +531,8 @@ tarfile
 timeit
 ------
 
-* The command-line interface now colorize error tracebacks
-  by default. This can be controlled by
+* The command-line interface now colorizes error tracebacks
+  by default. This can be controlled with
   :ref:`environment variables <using-on-controlling-color>`.
   (Contributed by Yi Hong in :gh:`139374`.)
 
