Revert "Delete LOAD_CONST_IMMORTAL (it exists in 3.14 but not 15)"
This reverts commit 7a1cc7fd011d5bba85c5b06b394390ac7d0b0fce.

--- a/Doc/whatsnew/3.14.rst
+++ b/Doc/whatsnew/3.14.rst
@@ -2864,7 +2864,7 @@ Pseudo-instructions
 * Add the :opcode:`!LOAD_CONST_MORTAL` pseudo instruction.
   (Contributed by Mark Shannon in :gh:`128685`.)
 
-* Add the :opcode:`!LOAD_CONST_IMMORTAL` pseudo instruction,
+* Add the :opcode:`LOAD_CONST_IMMORTAL` pseudo instruction,
   which does the same as :opcode:`!LOAD_CONST`, but is more efficient
   for immortal objects.
   (Contributed by Mark Shannon in :gh:`125837`.)
