--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-09-30-14-57-19.gh-issue-139116.nlVf40.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-09-30-14-57-19.gh-issue-139116.nlVf40.rst
@@ -1,2 +1,2 @@
-Prevent a deadlock when multiple threads start, stop and use tracemalloc
+Prevent a deadlock when multiple threads start, stop and use :mod:`tracemalloc`
 simultaneously.
