--- a/Misc/NEWS.d/next/Documentation/2025-10-01-10-06-52.gh-issue-139478.AdnsbB.rst
+++ b/Misc/NEWS.d/next/Documentation/2025-10-01-10-06-52.gh-issue-139478.AdnsbB.rst
@@ -1,1 +1,2 @@
-Add warning about lack of validation for ``xml.sax.saxutils.XMLGenerator``.
+:mod:`xml.sax.saxutils`: Add warning about lack of
+validation for :class:`~xml.sax.saxutils.XMLGenerator`.
