--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-04-10-01-52-42.gh-issue-132042.fePwlj.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-04-10-01-52-42.gh-issue-132042.fePwlj.rst
@@ -1,1 +1,2 @@
-Improve class creation times by up to 40% by pre-computing type slots just once. Patch by Sergey Miryanov.
+Improve class creation times by up to 12% by pre-computing type slots
+just once. Patch by Sergey Miryanov.
