fixup! Fix `hashlib.file_digest()` versionchanged description of `BlockingIOError`

--- a/Misc/NEWS.d/next/Documentation/2025-10-02-11-51-34.gh-issue-139495.y4Orqf.rst
+++ b/Misc/NEWS.d/next/Documentation/2025-10-02-11-51-34.gh-issue-139495.y4Orqf.rst
@@ -1,2 +1,2 @@
-Fix :func:`hashlib.file_digest()` versionchanged description of
+Fix :func:`hashlib.file_digest` versionchanged description of
 :exc:`BlockingIOError`
