--- a/Doc/whatsnew/3.14.rst
+++ b/Doc/whatsnew/3.14.rst
@@ -943,8 +943,9 @@ For further information on how to build Python, see
     Clang/LLVM 19, which causes the normal interpreter to be slower. We were unaware of this bug,
     resulting in inaccurate results. We sincerely apologize for
     communicating results that were only accurate for LLVM v19.1.x and v20.1.0. In the meantime,
-    the bug has been fixed in LLVM v20.1.1 and v21.1, but it will remain unfixed for LLVM v19.1.x
-    and v20.1.0. Thus any benchmarks with those versions of LLVM may produce inaccurate numbers.
+    the bug has been fixed in LLVM v20.1.1 and for the upcoming v21.1, but it will remain
+    unfixed for LLVM v19.1.x and v20.1.0. Thus
+    any benchmarks with those versions of LLVM may produce inaccurate numbers.
     (Thanks to Nelson Elhage for bringing this to light.)
 
 (Contributed by Ken Jin in :gh:`128563`, with ideas on how to implement this
