--- a/Misc/NEWS.d/next/Core_and_Builtins/2025-10-04-14-06-40.gh-issue-139476.02iIfn.rst
+++ b/Misc/NEWS.d/next/Core_and_Builtins/2025-10-04-14-06-40.gh-issue-139476.02iIfn.rst
@@ -1,2 +1,2 @@
-:func:`range` slicing with ``[:]`` no longer creates a copy, it now returns
-the same object, consistent with :func:`copy.copy`.
+:func:`range` slicing with ``[:]`` and ``[:len(r):]`` no longer creates a copy,
+it now returns the same object, consistent with :func:`copy.copy`.
